source/puppet/5.5/man/facts.md
---
layout: default
built_from_commit: 28833b083d1ed4cd328af45fbe26cfa00679c6b3
title: 'Man Page: puppet facts'
canonical: "/puppet/latest/man/facts.html"
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-facts</code> - <span class="man-whatis">Retrieve and store facts.</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>puppet facts <var>action</var> [--terminus _TERMINUS] [--extra HASH]</p>

<h2 id="DESCRIPTION">DESCRIPTION</h2>

<p>This subcommand manages facts, which are collections of normalized system
information used by Puppet. It can read facts directly from the local system
(with the default <code>facter</code> terminus).</p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any setting that's valid in the configuration
file is also a valid long argument, although it may or may not be
relevant to the present action. For example, <code>server</code> and <code>run_mode</code> are valid
settings, so you can specify <code>--server &lt;servername></code>, or
<code>--run_mode &lt;runmode></code> as an argument.</p>

<p>See the configuration file documentation at
<a href="https://docs.puppetlabs.com/puppet/latest/reference/configuration.html" data-bare-link="true">https://docs.puppetlabs.com/puppet/latest/reference/configuration.html</a> for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet with
<code>--genconfig</code>.</p>

<dl>
<dt>--render-as FORMAT</dt><dd>The format in which to render output. The most common formats are <code>json</code>,
<code>s</code> (string), <code>yaml</code>, and <code>console</code>, but other options such as <code>dot</code> are
sometimes available.</dd>
<dt>--verbose</dt><dd>Whether to log verbosely.</dd>
<dt class="flush">--debug</dt><dd>Whether to log debug information.</dd>
<dt>--extra HASH</dt><dd>A terminus can take additional arguments to refine the operation, which
are passed as an arbitrary hash to the back-end.  Anything passed as
the extra value is just send direct to the back-end.</dd>
<dt>--terminus _TERMINUS</dt><dd><p>Indirector faces expose indirected subsystems of Puppet. These
subsystems are each able to retrieve and alter a specific type of data
(with the familiar actions of <code>find</code>, <code>search</code>, <code>save</code>, and <code>destroy</code>)
from an arbitrary number of pluggable backends. In Puppet parlance,
these backends are called terminuses.</p>

<p>Almost all indirected subsystems have a <code>rest</code> terminus that interacts
with the puppet master's data. Most of them have additional terminuses
for various local data models, which are in turn used by the indirected
subsystem on the puppet master whenever it receives a remote request.</p>

<p>The terminus for an action is often determined by context, but
occasionally needs to be set explicitly. See the "Notes" section of this
face's manpage for more details.</p></dd>
</dl>


<h2 id="ACTIONS">ACTIONS</h2>

<dl>
<dt><code>find</code> - Retrieve a node's facts.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet facts [--terminus _TERMINUS] [--extra HASH] [<var>node_certname</var>]</p>

<p><code>DESCRIPTION</code></p>

<p>Retrieve a node's facts.</p>

<p><code>RETURNS</code></p>

<p>A hash containing some metadata and (under the "values" key) the set
of facts for the requested node. When used from the Ruby API: A
Puppet::Node::Facts object.</p>

<p>RENDERING ISSUES: Facts cannot currently be rendered as a string; use yaml
or json.</p>

<p><code>NOTES</code></p>

<p>When using the <code>facter</code> terminus, the host argument is ignored.</p></dd>
<dt><code>info</code> - Print the default terminus class for this face.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet facts info [--terminus _TERMINUS] [--extra HASH]</p>

<p><code>DESCRIPTION</code></p>

<p>Prints the default terminus class for this subcommand. Note that different
run modes may have different default termini; when in doubt, specify the
run mode with the '--run_mode' option.</p></dd>
<dt><code>save</code> - API only: create or overwrite an object.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet facts save [--terminus _TERMINUS] [--extra HASH] <var>key</var></p>

<p><code>DESCRIPTION</code></p>

<p>API only: create or overwrite an object. As the Faces framework does not
currently accept data from STDIN, save actions cannot currently be invoked
from the command line.</p></dd>
<dt><code>upload</code> - Upload local facts to the puppet master.</dt><dd><p><code>SYNOPSIS</code></p>

<p>puppet facts upload [--terminus _TERMINUS] [--extra HASH]</p>

<p><code>DESCRIPTION</code></p>

<p>Reads facts from the local system using the <code>facter</code> terminus, then
saves the returned facts using the rest terminus.</p>

<p><code>RETURNS</code></p>

<p>Nothing.</p>

<p><code>NOTES</code></p>

<p>This action requires that the puppet master's <code>auth.conf</code> file
allow <code>PUT</code> or <code>save</code> access to the <code>/puppet/v3/facts</code> API endpoint.</p>

<p>For details on configuring Puppet Server's <code>auth.conf</code>, see:</p>

<p><a href="https://puppet.com/docs/puppetserver/latest/config_file_auth.html" data-bare-link="true">https://puppet.com/docs/puppetserver/latest/config_file_auth.html</a></p>

<p>For legacy Rack-based Puppet Masters, see:</p>

<p><a href="https://puppet.com/docs/puppet/latest/config_file_auth.html" data-bare-link="true">https://puppet.com/docs/puppet/latest/config_file_auth.html</a></p></dd>
</dl>


<h2 id="EXAMPLES">EXAMPLES</h2>

<p><code>find</code></p>

<p>Get facts from the local system:</p>

<p>$ puppet facts find</p>

<p><code>upload</code></p>

<p>Upload facts:</p>

<p>$ puppet facts upload</p>

<h2 id="NOTES">NOTES</h2>

<p>This subcommand is an indirector face, which exposes <code>find</code>, <code>search</code>, <code>save</code>,
and <code>destroy</code> actions for an indirected subsystem of Puppet. Valid termini for
this face include:</p>

<ul>
<li><code>facter</code></li>
<li><code>memory</code></li>
<li><code>network_device</code></li>
<li><code>rest</code></li>
<li><code>store_configs</code></li>
<li><code>yaml</code></li>
</ul>


<h2 id="COPYRIGHT-AND-LICENSE">COPYRIGHT AND LICENSE</h2>

<p>Copyright 2011 by Puppet Inc.
Apache 2 license; see COPYING</p>

</div>
